añadiendo mas variables

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,10 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> 
 
+    <!-- Optional theme -->
+<script src="https://kit.fontawesome.com/90d23baab3.js"crossorigin="anonymous"></script>
+
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
